--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   
   body {
     margin: 60px auto;
+    line-height: 5;
   }
   
   h1,
@@ -49,20 +50,23 @@
   .navigation-links a {
     margin: 20px;
     border-radius: 4px;
-    padding: 20px 15px;
+    padding: 0 5px;
     text-decoration: none;
     text-transform: capitalize;
+    line-height: 4;
   }
   
   .contact-link {
     background: var(--primary-color);
     box-shadow: var(--box-shadow);
     color: white;
+    padding: 0 5px;
   }
   
   .about-link {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
+    padding: 0 5px;
   }
   
   .homepage-link {
@@ -102,10 +106,12 @@
     padding: 20px 15px;
     text-decoration: none;
     text-transform: capitalize;
+
   }
   
   .project-images {
     display: flex;
     flex-direction: row;
   }
+  
   
